<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainMenu"
        android:translationX="-280dp"
        android:layout_width="280dp"
        android:background="#1E2E61"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/userpic"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:src="@drawable/userpicbig"
            android:layout_width="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/user"
            android:text="@string/md_sharif_mia"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="#FFF"
            android:gravity="center"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/country"
            android:text="@string/bangladesh"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="#FFF"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/exp"
            android:gravity="left"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44sp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_button"
            android:textColor="#FFF"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:text="@string/explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/ao"
            android:gravity="left"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_button"
            android:textColor="#4B577B"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:text="@string/addons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/msg"
            android:gravity="left"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_button"
            android:textColor="#4B577B"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:text="@string/messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/st"
            android:gravity="left"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44sp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_button"
            android:textColor="#4B577B"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/so"
            android:gravity="left"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44sp"
            android:layout_marginTop="55dp"
            android:background="@drawable/background_button"
            android:textColor="#4B577B"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:text="@string/sing_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


    <RelativeLayout
        android:translationX="-280dp"
        android:id="@+id/mainContent"
        android:layout_width="416dp"
        android:layout_height="match_parent"
        >

        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/btnmenu"
            android:background="@drawable/userpic"
            android:layout_width="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/userhome"
            android:text="@string/md_sharif_mia"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="#181C34"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/countryhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userhome"
            android:gravity="center"
            android:text="@string/bangladesh"
            android:textColor="#181C34"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="168dp"
            android:gravity="left"
            android:text="@string/explore"
            android:layout_marginLeft="54dp"
            android:layout_marginStart="54dp"
            android:textColor="#181C34"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/ok2"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="54dp"
            android:layout_marginStart="54dp"
            android:text="@string/solving_your_problem"
            android:textColor="#181C34"
            android:textSize="16sp"
            android:layout_below="@id/ok"
            android:textStyle="normal" />




    </RelativeLayout>

</LinearLayout>